# openchoreo-home-idp

./: .gitignore  .mcp.json  README.md  manifest  opencode.jsonc  pytest.ini
.beads/: metadata.json
.github/workflows/: external-ci-openchoreo.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-28-docs.txt
.sisyphus/plans/: fluxcd-full-control.md
back/: AGENTS_old.md
back/.sisyphus/: boulder.json
docs/: OpenChoreo - Steps to run in Any k8s Environment.md  Pulumi-Terraform Bridge State Serialization Crash bug rfc.md  ai-features-setup.md  component-platform-mapping.md  deployment-guide.md  etc-hosts.txt  fluxcd-migration-report.md  gcp-manual-prerequisites.md  gcp-org-policy-guide.md  gke-deployment-discoveries-report.md  gke-deployment-status.md  infrastructure-gap-analysis.md  infrastructure-remediation-plan.md  integration-test-plan.md  lessons-learned.md  odigos-openobserve-tracing-status.md  openchoreo-fluxcd-argo-pipeline-guide.md  openchoreo-frontend-crashloop-diagnosis-and-fix.md  openobserve-migration-plan.md  project-onboarding-guide.md  rancher-cli.md  services.json  services.md
docs/Plans/: 20250623_Pulumi-Refactor-Constants-UV-Quality.md  20260322_0022_Step-by-step guide for OpenChoreo on K3d.md  20260323_1332_Pulumi-Python-OpenChoreo-Conversion-Plan.md  20260323_1400_Pulumi-Refactor-Magic-Strings-Quality.md  20260327_Thunder-Auth-Status-And-Remediation-Plan.md  20260328_Pulumi-vs-Original-Guide-Gap-Analysis-And-Next-Steps.md  20260328_Thunder-Auth-Deployment-Update-And-Next-Steps.md  20260702_Pulumi-Native-Providers-Cilium-Outputs-PythonLibs.md  OpenChoreo-v1.0-K3d-Installation-Guide.md  dns-epic-execution-plan.md  e2e-test-plan.md  ui-e2e-test-plan.md
docs/adr/: 001-pulumi-fluxcd-boundary.md  002-ui-to-gitops-sync-gap.md  006-kustomize-components-platform-feature-flags.md  (+2 more)
flux/: gitrepository.yaml
pulumi/: AGENTS.md  Pulumi.dev.yaml  Pulumi.gcp.yaml  Pulumi.rancher-desktop.yaml  Pulumi.talos-baremetal.yaml  Pulumi.talos.yaml  Pulumi.yaml  __main__.py  config.py  flux-install.yaml  pyproject.toml
pulumi/components/: backstage_infra.py  cilium.py  cilium_l2.py  control_plane.py  coredns_lan.py  data_plane.py  demo_app_bootstrap.py  flux_gitops.py  integration_tests.py  link_planes.py  observability_plane.py  odigos.py  otel_operator.py  prerequisites.py  thunder.py  tls_setup.py  workflow_plane.py
pulumi/gke-cluster/: Pulumi.gcp.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/gke-cluster/prereqs/: iam-setup.sh
pulumi/helpers/: annotate_dp_namespaces.py  bootstrap_providers.py  cluster_vars.py  copy_ca.py  dynamic_providers.py  k8s_ops.py  register_plane.py  wait.py
pulumi/policy/: PulumiPolicy.yaml  __main__.py  requirements.txt
pulumi/scripts/: bootstrap.py  bootstrap_k3d.py  bootstrap_rancher_desktop.py  bootstrap_talos.py  bootstrap_talos_baremetal.py  generate_env.py
pulumi/talos-cluster/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml  pyrightconfig.json
pulumi/talos-cluster-baremetal/: AGENTS.md  COMPARISON-AND-ALIGNMENT-PLAN.md  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  check_node_state.py  patches.py  pyproject.toml  pyrightconfig.json  wait_for_k8s_api.py  wait_for_talos_node.py
pulumi/talos-cluster-baremetal/tests/: conftest.py  test_config_patches.py
pulumi/templates/: k3d_entrypoint_cilium.sh  openbao_post_start.sh.tpl
pulumi/tests/: conftest.py  test_config_compliance.py  test_e2e_smoke.py  test_github_actions.py
pulumi/values/: control_plane.py  coredns_lan.py  data_plane.py  observability_plane.py  openbao.py  registry.py  workflow_plane.py
scripts/: discover-services.py  get-mcp-token.sh  k8s_talos_dmesg_20260401_201444.txt  k8s_talos_misc_20260401_201444.txt  k8s_talos_resources_20260401_201444.txt  talos_get_all_details.py
tests/: conftest.py  pyproject.toml
tests/control_plane/: __init__.py  test_backstage.py  test_openchoreo_api.py  test_thunder.py
tests/data_plane/: __init__.py  test_gateway.py
tests/e2e/: __init__.py  conftest.py  test_application_health.py  test_cilium.py  test_control_plane.py  test_data_plane.py  test_dependency_resolution.py  test_flux.py  test_gateway_api.py  test_gateway_e2e.py  test_gitops_consistency.py  test_observability.py  test_prerequisites.py  test_resource_chain.py  test_secrets.py  test_thunder.py  test_workflow_pipeline.py  test_workflow_plane.py
tests/gitops/: __init__.py  test_flux.py
tests/infrastructure/: __init__.py  test_cert_manager.py  test_cilium.py  test_external_secrets.py  test_openbao.py
tests/observability_plane/: __init__.py  test_observer.py  test_opensearch.py  test_opensearch_dashboards.py  test_prometheus.py
tests/structural/: conftest.py  test_kustomize_build.sh  test_kustomize_platforms.py
tests/ui-e2e/: .gitignore  auth.setup.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/ui-e2e/catalog/: catalog-list.spec.ts
tests/ui-e2e/component/: component-build.spec.ts  component-deploy.spec.ts  component-observability.spec.ts  component-overview.spec.ts
tests/ui-e2e/create/: scaffolder.spec.ts
tests/ui-e2e/global/: home-page.spec.ts  login-flow.spec.ts  sidebar-navigation.spec.ts
tests/ui-e2e/helpers/: auth-token.ts  navigation.ts  observer-api.ts  polling.ts  port-forward.ts  test-run-id.ts
tests/ui-e2e/observer/: alert-rules.spec.ts  alert-webhook.spec.ts  alerts-query.spec.ts  auth-and-validation.spec.ts  health.spec.ts  incidents.spec.ts  logs.spec.ts  metrics.spec.ts  traces.spec.ts
tests/ui-e2e/observer/fixtures/: e2e-log-alert-rule.yaml  e2e-notification-channel.yaml
tests/ui-e2e/observer/test-gen/: Dockerfile  app.py
tests/ui-e2e/platform/: platform-topology.spec.ts
tests/ui-e2e/project/: project-tabs.spec.ts
tests/utils/: __init__.py  auth_helpers.py  http_helpers.py  k8s_helpers.py  openchoreo_helpers.py  port_forward.py
tests/workflow_plane/: __init__.py  test_argo_workflows.py  test_docker_registry.py
(+240 files in other folders)
