[project]
name = "openchoreo-talos-cluster-baremetal"
version = "1.0.0"
description = "Pulumi-managed Talos bare-metal cluster for OpenChoreo"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-kubernetes>=4.0.0,<5.0.0",
    "pulumiverse-talos==0.7.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.0",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty]
environment = { python-version = "3.12" }
