[project]
name = "openchoreo-talos-cluster"
version = "1.0.0"
description = "Pulumi-managed Talos local cluster for OpenChoreo"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumiverse-talos>=0.7.1",
    "pulumi-libvirt>=0.5.4,<0.6.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty]
environment = { python-version = "3.12" }
